--- a/api_reference/fhir.html
+++ b/api_reference/fhir.html
@@ -39,7 +39,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="cardea.fhir.fhirbase" href="api/cardea.fhir.fhirbase.html" />
-    <link rel="prev" title="cardea.modeling.Modeler.execute_pipeline" href="api/cardea.modeling.Modeler.execute_pipeline.html" />
+    <link rel="prev" title="cardea.modeling.Modeler" href="api/cardea.modeling.Modeler.html" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="docsearch:language" content="en" />
   </head>
@@ -1314,7 +1314,7 @@
               
               <div class='prev-next-bottom'>
                 
-    <a class='left-prev' id="prev-link" href="api/cardea.modeling.Modeler.execute_pipeline.html" title="previous page">cardea.modeling.Modeler.execute_pipeline</a>
+    <a class='left-prev' id="prev-link" href="api/cardea.modeling.Modeler.html" title="previous page">cardea.modeling.Modeler</a>
     <a class='right-next' id="next-link" href="api/cardea.fhir.fhirbase.html" title="next page">cardea.fhir.fhirbase</a>
 
               </div>
