--- a/basic_concepts/machine_learning_tasks.html
+++ b/basic_concepts/machine_learning_tasks.html
@@ -236,7 +236,7 @@ values in the <strong>Missed Appointment</strong> task:</p>
 
 <span class="gp">In [2]: </span><span class="n">cardea</span> <span class="o">=</span> <span class="n">Cardea</span><span class="p">()</span>
 
-<span class="gp">In [3]: </span><span class="n">cardea</span><span class="o">.</span><span class="n">load_entityset</span><span class="p">()</span>
+<span class="gp">In [3]: </span><span class="n">cardea</span><span class="o">.</span><span class="n">load_entityset</span><span class="p">(</span><span class="n">data</span><span class="o">=</span><span class="s1">&#39;kaggle&#39;</span><span class="p">)</span>
 
 <span class="gp">In [4]: </span><span class="n">cardea</span><span class="o">.</span><span class="n">select_problem</span><span class="p">(</span><span class="s1">&#39;MissedAppointment&#39;</span><span class="p">)</span>
 <span class="gh">Out[4]: </span><span class="go"></span>
