--- a/_modules/cardea/core.html
+++ b/_modules/cardea/core.html
@@ -157,17 +157,19 @@
 <span class="sd">This module defines the Cardea Class, which is responsible for the</span>
 <span class="sd">tying all components together, as well as the interact with them.</span>
 <span class="sd">&quot;&quot;&quot;</span>
-
 <span class="kn">import</span> <span class="nn">logging</span>
 <span class="kn">import</span> <span class="nn">os</span>
 <span class="kn">import</span> <span class="nn">pickle</span>
 <span class="kn">from</span> <span class="nn">inspect</span> <span class="kn">import</span> <span class="n">isclass</span>
+<span class="kn">from</span> <span class="nn">io</span> <span class="kn">import</span> <span class="n">BytesIO</span>
+<span class="kn">from</span> <span class="nn">urllib.request</span> <span class="kn">import</span> <span class="n">urlopen</span>
+<span class="kn">from</span> <span class="nn">zipfile</span> <span class="kn">import</span> <span class="n">ZipFile</span>
 
 <span class="kn">import</span> <span class="nn">featuretools</span> <span class="k">as</span> <span class="nn">ft</span>
 <span class="kn">import</span> <span class="nn">pandas</span> <span class="k">as</span> <span class="nn">pd</span>
 
 <span class="kn">import</span> <span class="nn">cardea</span>
-<span class="kn">from</span> <span class="nn">cardea.data_loader</span> <span class="kn">import</span> <span class="n">EntitySetLoader</span>
+<span class="kn">from</span> <span class="nn">cardea.data_loader</span> <span class="kn">import</span> <span class="n">EntitySetLoader</span><span class="p">,</span> <span class="n">load_mimic_data</span>
 <span class="kn">from</span> <span class="nn">cardea.featurization</span> <span class="kn">import</span> <span class="n">Featurization</span>
 <span class="kn">from</span> <span class="nn">cardea.modeling</span> <span class="kn">import</span> <span class="n">Modeler</span>
 <span class="kn">from</span> <span class="nn">cardea.problem_definition</span> <span class="kn">import</span> <span class="p">(</span>
@@ -175,6 +177,13 @@
     <span class="n">ProlongedLengthOfStay</span><span class="p">,</span> <span class="n">Readmission</span><span class="p">)</span>
 
 <span class="n">LOGGER</span> <span class="o">=</span> <span class="n">logging</span><span class="o">.</span><span class="n">getLogger</span><span class="p">(</span><span class="vm">__name__</span><span class="p">)</span>
+
+<span class="n">DATA_PATH</span> <span class="o">=</span> <span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">join</span><span class="p">(</span>
+    <span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">dirname</span><span class="p">(</span><span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">abspath</span><span class="p">(</span><span class="vm">__file__</span><span class="p">)),</span>
+    <span class="s1">&#39;data&#39;</span>
+<span class="p">)</span>
+<span class="n">BUCKET</span> <span class="o">=</span> <span class="s1">&#39;dai-cardea&#39;</span>
+<span class="n">S3_URL</span> <span class="o">=</span> <span class="s1">&#39;https://</span><span class="si">{}</span><span class="s1">.s3.amazonaws.com/</span><span class="si">{}</span><span class="s1">&#39;</span>
 
 
 <div class="viewcode-block" id="Cardea"><a class="viewcode-back" href="../../api_reference/api/cardea.Cardea.html#cardea.Cardea">[docs]</a><span class="k">class</span> <span class="nc">Cardea</span><span class="p">():</span>
@@ -207,41 +216,49 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">target_entity</span> <span class="o">=</span> <span class="kc">None</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">modeler</span> <span class="o">=</span> <span class="kc">None</span></div>
 
-<div class="viewcode-block" id="Cardea.load_entityset"><a class="viewcode-back" href="../../api_reference/api/cardea.Cardea.load_entityset.html#cardea.Cardea.load_entityset">[docs]</a>    <span class="k">def</span> <span class="nf">load_entityset</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">folder_path</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
-        <span class="sd">&quot;&quot;&quot;Returns an entityset loaded with .csv files in folder_path.</span>
+<div class="viewcode-block" id="Cardea.load_entityset"><a class="viewcode-back" href="../../api_reference/api/cardea.Cardea.load_entityset.html#cardea.Cardea.load_entityset">[docs]</a>    <span class="k">def</span> <span class="nf">load_entityset</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">data</span><span class="p">,</span> <span class="n">fhir</span><span class="o">=</span><span class="kc">True</span><span class="p">):</span>
+        <span class="sd">&quot;&quot;&quot;Returns an entityset loaded with .csv files in data.</span>
 
-<span class="sd">        Load the given dataset within the folder path into an entityset. The dataset</span>
-<span class="sd">        must be in a FHIR structure format. If no folder_path is not passed, the</span>
-<span class="sd">        function will automatically load kaggle&#39;s missed appointment dataset.</span>
+<span class="sd">        Load the given dataset into an entityset. The dataset</span>
+<span class="sd">        must be in FHIR or MIMIC structure format.</span>
 
 <span class="sd">        Args:</span>
-<span class="sd">            folder_path (str):</span>
-<span class="sd">                A directory of all .csv files that should be loaded.</span>
+<span class="sd">            data (str):</span>
+<span class="sd">                A directory of all .csv files that should be loaded. To load demo dataset,</span>
+<span class="sd">                pass the name of the dataset &quot;kaggle&quot; or &quot;mimic&quot;.</span>
+<span class="sd">            fhir (bool):</span>
+<span class="sd">                An indicator of whether to use FHIR or MIMIC schema.</span>
 
 <span class="sd">        Returns:</span>
 <span class="sd">            featuretools.EntitySet:</span>
 <span class="sd">                An entityset with loaded data.</span>
 <span class="sd">        &quot;&quot;&quot;</span>
+        <span class="n">demo</span> <span class="o">=</span> <span class="p">[</span><span class="s1">&#39;kaggle&#39;</span><span class="p">,</span> <span class="s1">&#39;mimic&#39;</span><span class="p">]</span>
+        <span class="k">if</span> <span class="ow">not</span> <span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">exists</span><span class="p">(</span><span class="n">data</span><span class="p">)</span> <span class="ow">and</span> <span class="n">data</span> <span class="ow">in</span> <span class="n">demo</span><span class="p">:</span>
+            <span class="n">data</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">download_demo</span><span class="p">(</span><span class="n">data</span><span class="p">)</span>
 
-        <span class="k">if</span> <span class="n">folder_path</span><span class="p">:</span>
-            <span class="bp">self</span><span class="o">.</span><span class="n">es</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">es_loader</span><span class="o">.</span><span class="n">load_data_entityset</span><span class="p">(</span><span class="n">folder_path</span><span class="p">)</span>
-
+        <span class="k">if</span> <span class="n">fhir</span><span class="p">:</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">es</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">es_loader</span><span class="o">.</span><span class="n">load_data_entityset</span><span class="p">(</span><span class="n">data</span><span class="p">)</span>
         <span class="k">else</span><span class="p">:</span>
-            <span class="n">csv_s3</span> <span class="o">=</span> <span class="s2">&quot;https://s3.amazonaws.com/dai-cardea/&quot;</span>
-            <span class="n">kaggle</span> <span class="o">=</span> <span class="p">[</span><span class="s1">&#39;Address&#39;</span><span class="p">,</span>
-                      <span class="s1">&#39;Appointment_Participant&#39;</span><span class="p">,</span>
-                      <span class="s1">&#39;Appointment&#39;</span><span class="p">,</span>
-                      <span class="s1">&#39;CodeableConcept&#39;</span><span class="p">,</span>
-                      <span class="s1">&#39;Coding&#39;</span><span class="p">,</span>
-                      <span class="s1">&#39;Identifier&#39;</span><span class="p">,</span>
-                      <span class="s1">&#39;Observation&#39;</span><span class="p">,</span>
-                      <span class="s1">&#39;Patient&#39;</span><span class="p">,</span>
-                      <span class="s1">&#39;Reference&#39;</span><span class="p">]</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">es</span> <span class="o">=</span> <span class="n">load_mimic_data</span><span class="p">(</span><span class="n">data</span><span class="p">)</span></div>
 
-            <span class="n">fhir</span> <span class="o">=</span> <span class="p">{</span>
-                <span class="n">resource</span><span class="p">:</span> <span class="n">pd</span><span class="o">.</span><span class="n">read_csv</span><span class="p">(</span>
-                    <span class="n">csv_s3</span> <span class="o">+</span> <span class="n">resource</span> <span class="o">+</span> <span class="s2">&quot;.csv&quot;</span><span class="p">)</span> <span class="k">for</span> <span class="n">resource</span> <span class="ow">in</span> <span class="n">kaggle</span><span class="p">}</span>
-            <span class="bp">self</span><span class="o">.</span><span class="n">es</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">es_loader</span><span class="o">.</span><span class="n">load_df_entityset</span><span class="p">(</span><span class="n">fhir</span><span class="p">)</span></div>
+    <span class="nd">@staticmethod</span>
+    <span class="k">def</span> <span class="nf">download_demo</span><span class="p">(</span><span class="n">name</span><span class="p">,</span> <span class="n">data_path</span><span class="o">=</span><span class="n">DATA_PATH</span><span class="p">):</span>
+        <span class="n">data_path</span> <span class="o">=</span> <span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">data_path</span><span class="p">,</span> <span class="n">name</span><span class="p">)</span>
+        <span class="n">os</span><span class="o">.</span><span class="n">makedirs</span><span class="p">(</span><span class="n">data_path</span><span class="p">,</span> <span class="n">exist_ok</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span>
+
+        <span class="n">url</span> <span class="o">=</span> <span class="n">S3_URL</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">BUCKET</span><span class="p">,</span> <span class="s1">&#39;</span><span class="si">{}</span><span class="s1">.zip&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">name</span><span class="p">))</span>
+        <span class="n">compressed</span> <span class="o">=</span> <span class="n">ZipFile</span><span class="p">(</span><span class="n">BytesIO</span><span class="p">(</span><span class="n">urlopen</span><span class="p">(</span><span class="n">url</span><span class="p">)</span><span class="o">.</span><span class="n">read</span><span class="p">()))</span>
+
+        <span class="n">LOGGER</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="s1">&#39;Downloading dataset </span><span class="si">%s</span><span class="s1"> from </span><span class="si">%s</span><span class="s1">&#39;</span><span class="p">,</span> <span class="n">name</span><span class="p">,</span> <span class="n">url</span><span class="p">)</span>
+        <span class="k">for</span> <span class="n">file</span> <span class="ow">in</span> <span class="n">compressed</span><span class="o">.</span><span class="n">namelist</span><span class="p">():</span>
+            <span class="n">filename</span> <span class="o">=</span> <span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">data_path</span><span class="p">,</span> <span class="n">file</span><span class="p">)</span>
+            <span class="n">csv_file</span> <span class="o">=</span> <span class="n">compressed</span><span class="o">.</span><span class="n">open</span><span class="p">(</span><span class="n">file</span><span class="p">)</span>
+
+            <span class="n">data</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">read_csv</span><span class="p">(</span><span class="n">csv_file</span><span class="p">,</span> <span class="n">dtype</span><span class="o">=</span><span class="nb">str</span><span class="p">)</span>
+            <span class="n">data</span><span class="o">.</span><span class="n">to_csv</span><span class="p">(</span><span class="n">filename</span><span class="p">,</span> <span class="n">index</span><span class="o">=</span><span class="kc">False</span><span class="p">)</span>
+
+        <span class="k">return</span> <span class="n">data_path</span>
 
 <div class="viewcode-block" id="Cardea.list_problems"><a class="viewcode-back" href="../../api_reference/api/cardea.Cardea.list_problems.html#cardea.Cardea.list_problems">[docs]</a>    <span class="k">def</span> <span class="nf">list_problems</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Returns a list of the currently available problems.</span>
